# AU-CPP-SW-Design-Advanced

./: README.md  main.cpp
1-ToolchainSetup/: CMakeLists.txt
2-MicroBenchmark/: CMakeLists.txt  linear_search.hpp
2-MicroBenchmark/Tests/: CMakeLists.txt  numbers_tests.cpp  strings_test.cpp
3-Concurrency/: CMakeLists.txt
3-Concurrency/Tests/: CMakeLists.txt  find_all_test.cc  find_all_test.cpp  synch_queue_test.cc
3-Concurrency/docs/: 774056_Richard-Kroesen_Concurrency.docx  ConcurrencyBenmark-Results.xlsx
3-Concurrency/src/: .clang-tidy  main.cpp  object_searcher.hpp  performance_measurer.hpp  synch_queue.hpp
4-containers/: CMakeLists.txt
4-containers/Tests/: CMakeLists.txt  find_all_test.cc
4-containers/docs/: 774056_Richard-Kroesen_Containers.docx  Measurements.xlsx  ~$4056_Richard-Kroesen_Containers.docx  ~WRL0797.tmp
4-containers/src/: container.hpp  main.cpp  main_structs.cpp  random_generators.hpp
5-GenericProgram/Tests/: CMakeLists.txt
5-GenericProgram/docs/: 774056_Richard-Kroesen_GenericProgramming.docx
5-GenericProgram/src/: chess_piece.hpp  generalized_matrix.hpp  main.cpp  matrix.hpp
Tests/: CMakeLists.txt  exercise_tests.cpp  find_seven.cpp
